# mcubes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
python/: Cargo.toml  pyproject.toml
src/: lib.rs  tables.rs
